# my_flix

be_flix/: pyproject.toml
be_flix/be_flix/: file_browser.py  main.py  rest.py  rest_handles.py  service.py  websocket.py
libraries/rest_api/: pyproject.toml
libraries/rest_api/rest_api/: rest.py
