[tool.poetry]
name = "rest-api"
version = "0.1.0"
description = ""
authors = ["anthony <anthonybruno63@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
asyncio = "^3.4.3"
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
